+index.html(전 푸쉬 과정에서 미포함) - 화면 출력에 관련된 코드 수정

--- a/templates/index.html
+++ b/templates/index.html
@@ -47,11 +47,10 @@
         </div>
         <!--날씨 배너-->
         <div class="row">
-            <div class="col-md-6 weather">
-                날씨: <span id="weather_comment"></span>
-            </div>
-            <div class="col-md-3 weather" id="tempr">기온: </div>
-            <div class="col-md-3 weather">이미지: <img class="wicon" id="wicon" src=""></div>
+            <div class="col-md-8 weather weather_title"><img class="wicon" id="wicon" src=""><span
+                    id="weather_comment"></span></div>
+            <div class="col-md-4 weather weather_temp_img" id="tempr"></div>
+            {#            <div class="col-md-3 weather"></div>#}
         </div>
 
         <!--검색-->
