--- a/static/Til.css
+++ b/static/Til.css
@@ -76,19 +76,43 @@
 }
 
 /*마우스 오버*/
-.imgDiv {
-    height: 200px;
+
+
+h5 {
+    display: block;
+    width: 150px;
+    padding: 2px 16px;
+    cursor: pointer;
 }
-.text {
-    background: #000000;
-    opacity: 0;
+.arrow_box {
+  display: none;
+  position: absolute;
+  width: 100px;
+  padding: 8px;
+  left: 0;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  border-radius: 8px;
+  background: #333;
+  color: #fff;
+  font-size: 14px;
 }
-.text p {
-    margin: auto;
+
+.arrow_box:after {
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  width: 0;
+  height: 0;
+  margin-left: -10px;
+  border: solid transparent;
+  border-color: rgba(51, 51, 51, 0);
+  border-bottom-color: #333;
+  border-width: 10px;
+  pointer-events: none;
+  content: " ";
 }
-.imgDiv:hover .text {
-    height: 200px;
-    opacity: 0.5 ;
-    text-align: center;
-    color: #ffffff;
+
+h5:hover + p.arrow_box {
+  display: block;
 }
