--- a/templates/myPage.html
+++ b/templates/myPage.html
@@ -36,114 +36,186 @@
     <link href="https://fonts.googleapis.com/css2?family=Poor+Story&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='Til.css') }}">
     <script type="text/javascript" src="{{ url_for('static', filename='Til.js') }}"></script>
-    <title>Title</title>
 
+    <script defer src="https://use.fontawesome.com/releases/v5.15.2/js/all.js"
+            integrity="sha384-vuFJ2JiSdUpXLKGK+tDteQZBqNlMwAjhZ3TvPaDfN9QmbPb7Q8qUpbSNapQev3YF"
+            crossorigin="anonymous"></script>
+
+    <title>{{ user_info.name }}님의 마이페이지</title>
+    <style type="text/css">
+    </style>
     <script>
         {% if msg %}
-            alert("{{ msg }}")
+            console.log('{{ msg }}')
+            console.log('{{ user_info }}')
         {% endif %}
-        // ['쿠키'라는 개념에 대해 알아봅시다]
-        // 로그인을 구현하면, 반드시 쿠키라는 개념을 사용합니다.
-        // 페이지에 관계없이 브라우저에 임시로 저장되는 정보입니다. 키:밸류 형태(딕셔너리 형태)로 저장됩니다.
-        // 쿠키가 있기 때문에, 한번 로그인하면 네이버에서 다시 로그인할 필요가 없는 것입니다.
-        // 브라우저를 닫으면 자동 삭제되게 하거나, 일정 시간이 지나면 삭제되게 할 수 있습니다.
-        function edit_success() {
+
+        function update_profile() {
+            let newPw = $("#input-new-password").val()
+            let newPwChk = $("#input-new-password-chk").val()
+            let newurl = $("#input-new-url").val()
+            let newbirth = $("#input-new-birth").val()
+
+            console.log(newPw, newPwChk)
+
+            if (newPw == "" || newPwChk == "") {
+                alert("입력사항이 부족합니다. 모두 입력해주세요!")
+                return;
+            } else {
+                if (newPw == "") {
+                    $("#help-password").text("비밀번호를 입력해주세요.").addClass("is-danger")
+                    $("#input-new-password").focus()
+                    return;
+                } else if (!is_password(newPw)) {
+                    $("#help-password").text("비밀번호의 형식을 확인해주세요. 영문과 숫자 필수 포함, 특수문자(!@#$%^&*) 사용가능 8-20자").addClass("is-danger")
+                    $("#input-new-password").focus()
+                    return;
+                } else {
+                    $("#help-password").text("사용할 수 있는 비밀번호입니다.").removeClass("is-danger").addClass("is-success")
+                }
+
+                if (newPwChk == "") {
+                    $("#help-password2").text("비밀번호를 입력해주세요.").addClass("is-danger")
+                    $("#input-new-password-chk").focus()
+                    return;
+                } else if (newPwChk != newPw) {
+                    $("#help-password2").text("비밀번호가 일치하지 않습니다.").addClass("is-danger")
+                    $("#input-new-password-chk").focus()
+                    return;
+                } else {
+                    $("#input-new-password-chk").text("비밀번호가 일치합니다.").removeClass("is-danger").addClass("is-success")
+                }
+            }
+
             $.ajax({
                 type: "POST",
-                url: "/api/login",
+                url: "/update_profile",
                 data: {
-                    pw_give: $('#userpw').val()
+                    password_give: newPw,
+                    url_give: newurl,
+                    birth_give: newbirth
                 },
                 success: function (response) {
-                    if (response['result'] == 'success') {
-                        // 로그인이 정상적으로 되면, 토큰을 받아옵니다.
-                        // 이 토큰을 mytoken이라는 키 값으로 쿠키에 저장합니다.
-                        $.cookie('mytoken', response['token']);
-
-                        alert('정보 수정 완료!')
-                        window.location.href = '/'
-                    } else {
-                        // 로그인이 안되면 에러메시지를 띄웁니다.
-                        alert(response['msg'])
-                    }
+                    alert("프로필을 업데이트하였습니다!")
+                    {#window.location.replace("/myPage")#}
+                    window.location.reload()
                 }
-            })
+            });
         }
     </script>
 
 </head>
 
 <body>
-    <div class="wrap">
-        <div class="wrapp">
-            <div class="section has-text-centered">
-                <h1 class="title">마이 페이지</h1>
-                <div class="container" style="width:60%">
-                    <div class="field is-horizontal">
-                        <div class="field-label is-normal">
-                            <label class="label" for="userid">ID</label>
-                        </div>
-                        <div class="field-body">
-                            <div class="field">
-                                <div class="control">
-                                    {#<input type="text" class="input" id="userid" aria-describedby="emailHelp" placeholder="My ID">#}
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="field is-horizontal">
-                        <div class="field-label is-normal">
-                            <label class="label" for="userpw">PW</label>
-                        </div>
-                        <div class="field-body">
-                            <div class="field">
-                                <div class="control">
-                                    <input class="input is-rounded" id="userpw" type="password" placeholder="새 비밀번호 입력">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="field is-horizontal">
-                        <div class="field-label is-normal">
-                            <label class="label" for="userpw">PW 확인</label>
-                        </div>
-                        <div class="field-body">
-                            <div class="field">
-                                <div class="control">
-                                    <input class="input is-rounded" id="userpw_chk" type="password" placeholder="새 비밀번호 입력">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="field is-horizontal">
-                        <div class="field-label is-normal">
-                            <label class="label" for="userpw">Blog 주소</label>
-                        </div>
-                        <div class="field-body">
-                            <div class="field">
-                                <div class="control">
-                                    {#<input type="password" class="input" id="userpw" placeholder="My Password">#}
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="field is-horizontal">
-                        <div class="field-label is-normal">
-                            <label class="label" for="userpw">생일</label>
-                        </div>
-                        <div class="field-body">
-                            <div class="field">
-                                <div class="control">
-                                    {#<input type="password" class="input" id="userpw" placeholder="My Password">#}
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <button class="button is-primary" onclick="login()">완료</button>
-                </div>
-            </div>
-            <button class="button is-primary" onclick="withdraw()">탈퇴ㅠㅠ</button>
+<header>
+    <nav class="navbar navbar-expand-lg navbar-light navbar-custom">
+        <a class="navbar-brand" href="#" onclick="window.location.href = '/'">TIL_project</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                {% if status %}
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/myPage/{{ user_info.id }}">마이페이지<span
+                                class="sr-only">(current)</span></a>
+                    </li>
+
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#" onclick="sign_out()">로그아웃<span
+                                class="sr-only">(current)</span></a>
+                    </li>
+                {% else %}
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#" data-toggle="modal" data-target="#loginModalId">로그인<span
+                                class="sr-only">(current)</span></a>
+                    </li>
+                {% endif %}
+            </ul>
         </div>
+    </nav>
+</header>
+<div class="wrap">
+    <div class="wrapp">
+        <div class="section has-text-centered">
+            <h1 class="title">마이 페이지</h1>
+            <div class="container" style="width:60%">
+                <div class="field is-horizontal">
+                    <div class="field-label is-normal">
+                        <label class="label" for="userid">ID</label>
+                    </div>
+                    <div class="field-body">
+                        <div class="field">
+                            <div class="control">
+                                <p>
+                                    {{ user_info.id }}
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="field is-horizontal">
+                    <div class="field-label is-normal">
+                        <label class="label" for="userpw">PW</label>
+                    </div>
+                    <div class="field-body">
+                        <div class="field">
+                            <div class="control">
+                                <input class="input is-rounded" id="input-new-password" type="password"
+                                       placeholder="새 비밀번호 입력">
+                                <p id="help-password" class="help" style="font-size: 12px">영문과 숫자 조합의 8-20자의
+                                    비밀번호를 설정해주세요. 특수문자(!@#$%^&*)도 사용 가능합니다.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="field is-horizontal">
+                    <div class="field-label is-normal">
+                        <label class="label" for="userpwchk">PW 확인</label>
+                    </div>
+                    <div class="field-body">
+                        <div class="field">
+                            <div class="control">
+                                <input class="input is-rounded" id="input-new-password-chk" type="password"
+                                       placeholder="새 비밀번호 확인">
+                                <p id="help-password2" class="help">비밀번호를 한번 더 입력해주세요.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="field is-horizontal">
+                    <div class="field-label is-normal">
+                        <label class="label" for="userurl">Blog 주소</label>
+                    </div>
+                    <div class="field-body">
+                        <div class="field">
+                            <div class="control">
+                                <input class="input is-rounded" id="input-new-url" type="text"
+                                       placeholder="블로그 주소 입력" value="{{ user_info.url }}">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="field is-horizontal">
+                    <div class="field-label is-normal">
+                        <label class="label" for="userbirth">생일</label>
+                    </div>
+                    <div class="field-body">
+                        <div class="field">
+                            <div class="control">
+                                <input class="input is-rounded" id="input-new-birth" type="text"
+                                       placeholder="생년월일 입력" value="{{ user_info.birth }}">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button class="button is-primary" onclick="update_profile()">수정 완료</button>
+                <button class="button is-primary" onclick="window.location.href = '/'">취소</button>
+            </div>
+        </div>
+        {#<button class="button is-primary" onclick="withdraw()">탈퇴ㅠㅠ</button>#}
     </div>
+</div>
 </body>
 </html>
