--- a/templates/index.html
+++ b/templates/index.html
@@ -66,8 +66,17 @@
             <div class="input-group-append">
                 <button onclick="search()" id="searchButton" class="btn btn-warning" type="submit">검색</button>
             </div>
-
         </div>
+
+        <!--랭킹-->
+        <div>
+        <table class="rankwrap">
+            <tbody id ="orderrank">
+
+            </tbody>
+
+        </table>
+            </div>
         <!-- 블로그 카드 띄우기 -->
         <div id="flush">
             <div onclick="velClick()" type="button" class="btn btn-info btn-lg" style="margin: 10px;">Velog</div>
@@ -90,3 +99,4 @@
 </div>
 </body>
 </html>
+
