--- a/static/Til.css
+++ b/static/Til.css
@@ -75,6 +75,12 @@
 
 }
 
+.rankwrap {
+    display: flex;
+    justify-content: center;
+}
+
+
 /*마우스 오버*/
 
 
@@ -116,3 +122,4 @@ h5 {
 h5:hover + p.arrow_box {
   display: block;
 }
+
