--- a/templates/review.html
+++ b/templates/review.html
@@ -45,7 +45,7 @@
             crossorigin="anonymous"></script>
 
     <script>
-        let idx = '{{ idx }}'
+        let id = '{{ id }}'
         $(document).ready(function () {
             showReviews()
         });
@@ -53,7 +53,7 @@
         function showReviews() {
             $.ajax({
                 type: "GET",
-                url: "/memo?txt=" + idx,
+                url: "/memo?txt=" + id,
                 data: {},
                 success: function (response) {
                     let memos = response['all_memos'];
@@ -71,15 +71,14 @@
             })
         }
 
-        function postingArticle(idx) {
+        function postingArticle(id) {
             let url = $("#post-url").val();
             let comment = $("#post-comment").val();
-            let id = idx;
             console.log(id)
             $.ajax({
                 type: "POST",
                 url: "/article",
-                data: {idx: id, title: url, content: comment},
+                data: {id: id, title: url, content: comment},
                 success: function (response) {
                     if (response["result"] == "success") {
                         alert("리뷰 저장 성공!");
@@ -129,7 +128,7 @@
                         <textarea id="post-comment" class="form-control" rows="2"></textarea>
                     </div>
                     <input id="post-idx" class="form-control" placeholder="" hidden>
-                    <button type="button" class="btn btn-primary" onclick="postingArticle(idx)">리뷰저장</button>
+                    <button type="button" class="btn btn-primary" onclick="postingArticle(id)">리뷰저장</button>
                 </div>
             </div>
 
