--- a/templates/review.html
+++ b/templates/review.html
@@ -46,6 +46,7 @@
 
     <script>
         let id = '{{ id }}'
+        console.log(id)
         $(document).ready(function () {
             showReviews()
         });
@@ -53,15 +54,15 @@
         function showReviews() {
             $.ajax({
                 type: "GET",
-                url: "/memo?txt=" + id,
+                url: "/reviews?txt=" + id,
                 data: {},
                 success: function (response) {
-                    let memos = response['all_memos'];
-                    for(i=0; i<memos.length; i++) {
+                    let reviews = response['all_reviews'];
+                    for(i=0; i<reviews.length; i++) {
                         let temp_html = `<tr>
                                                <th>${i+1}</th>
-                                               <td>${memos[i]['writer']}</td>
-                                               <td>${memos[i]['reviewcontent']}</td>
+                                               <td>${reviews[i]['writer']}</td>
+                                               <td>${reviews[i]['reviewcontent']}</td>
                                                <td><button type="button" class="btn btn-danger">삭제</button></td>
                                           </tr>`
                         $('#reviewtable').append(temp_html)
@@ -71,14 +72,14 @@
             })
         }
 
-        function postingArticle(id) {
-            let url = $("#post-url").val();
+        function review_post(id_receive) {
+            let writer = $("#post-writer").val();
             let comment = $("#post-comment").val();
-            console.log(id)
+            console.log(id_receive)
             $.ajax({
                 type: "POST",
-                url: "/article",
-                data: {id: id, title: url, content: comment},
+                url: "/reviews",
+                data: {id: id_receive, writer: writer, content: comment},
                 success: function (response) {
                     if (response["result"] == "success") {
                         alert("리뷰 저장 성공!");
@@ -121,14 +122,14 @@
                     <hr width = "100%" color = "blue" size = "3">
                     <div class="form-group">
                         <label for="post-url">작성자</label>
-                        <input id="post-url" class="form-control" placeholder="">
+                        <input id="post-writer" class="form-control" placeholder="">
                     </div>
                     <div class="form-group">
                         <label for="post-comment">한 줄 리뷰</label>
                         <textarea id="post-comment" class="form-control" rows="2"></textarea>
                     </div>
                     <input id="post-idx" class="form-control" placeholder="" hidden>
-                    <button type="button" class="btn btn-primary" onclick="postingArticle(id)">리뷰저장</button>
+                    <button type="button" class="btn btn-primary" onclick="review_post({{ id }})">리뷰저장</button>
                 </div>
             </div>
 
