--- a/templates/index.html
+++ b/templates/index.html
@@ -104,7 +104,7 @@
 
         <!--검색-->
         <div class="input-group mb-3 searchbar">
-            <input id="searchtxt" type="text" class="form-control" placeholder="이름을 입력하세요" style="text-align: center;">
+            <input onkeyup="enterkey();" id="searchtxt" type="text" class="form-control" placeholder="이름을 입력하세요" style="text-align: center;">
             <div class="input-group-append">
                 <button onclick="search()" id="searchButton" class="btn btn-warning" type="submit">검색</button>
             </div>
