--- a/templates/index.html
+++ b/templates/index.html
@@ -180,7 +180,7 @@
                         특수문자(!@#$%^&*)도 사용
                         가능합니다.</p>
                     <div id="find-password">
-                        <p class="font-small blue-text d-flex justify-content-end"><a href="#" class="blue-text ml-1">비밀번호</a>를
+                        <p class="font-small blue-text d-flex justify-content-end"><a href="#" onclick="find_password()" class="blue-text ml-1">비밀번호</a>를
                             까먹으셨나요?</p>
                     </div>
                 </div>
