--- a/templates/myPage.html
+++ b/templates/myPage.html
@@ -251,7 +251,7 @@
                     <div class="field-body">
                         <div class="field">
                             <div class="control">
-                                <input class="input_profile" type="text" id="input-new-profile" value="{{ user_info.profile_info }}">
+                                <input class="input input_profile" type="text" style="height: 250px; " id="input-new-profile" value="{{ user_info.profile_info }}">
                             </div>
                         </div>
                     </div>
